# app.js
@@ -3,6 +3,7 @@ const express = require('express');
 const bodyParser = require('body-parser');
 const webhookRoutes = require('./routes/webhook');
 const printQueueRoutes = require('./routes/printqueue');
+const clientRoutes = require('./routes/clients');
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
 const swaggerDocument = YAML.load('./swagger.yaml');
@@ -12,6 +13,7 @@ const app = express();
 app.use(bodyParser.json());
 app.use('/webhook', webhookRoutes);
 app.use('/printqueue', printQueueRoutes);
+app.use('/clients', clientRoutes);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const PORT = process.env.PORT || 3000;
