# routes/clients.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const { listLarsClients } = require('../controllers/clientController');
+
+const router = express.Router();
+
+router.get('/', listLarsClients);
+
+module.exports = router;
+
